# Twin-2-Engine

./: .gitignore  BindingPoints.txt  CMakeLists.txt  CMakeSettings.json  EnemyAI_Decision_Tree_Leafs.txt  EnemyAI_Parameters.txt  EnemyAI_States.txt  README.md  calculateContribution.sh  cpp.hint  fight_calculations.txt  mat1.material  vld.ini
src/: CMakeLists.txt  GameConfig.yaml.in  ShadersOrigin  main.cpp  main2.cpp  pch.h
src/Additional/: CMakeLists.txt
src/Additional/DecisionTree/: CMakeLists.txt
src/Additional/DecisionTree/src/: impl.cpp
src/Additional/EnemyAI/: CMakeLists.txt
src/Additional/EnemyAI/doc/: EnemyAI_Decision_Tree_Leafs.txt
src/Additional/EngineAlgorithms/: CMakeLists.txt  pch.h
src/Additional/GameScripts/: CMakeLists.txt  pch.h
src/Additional/GameScripts/doc/: fight_calculations.txt
src/Additional/GameScripts/include/: BlockStartSelTut.h  CityLightsComponent.h  ConcertRoad.h  Enemy.h  EnemyMovement.h  GameManager.h  GameTimer.h  GodRayComponent.h  MenuManager.h  MenuParticles.h  MoneyFunctionData.h  MovementController.h  ParticleGenerator.h  ParticleSystemsController.h  PlaneGenerator.h  Playable.h  Player.h  PlayerMovement.h  StarComponent.h  TutorialSeries.h  TutorialsController.h  UIParticleGenerator.h
src/Additional/GameScripts/src/: ConcertRoad.cpp  Enemy.cpp  EnemyMovement.cpp  GameManager.cpp  GameTimer.cpp  MoneyFunctionData.cpp  ParticleGenerator.cpp  ParticleSystemsController.cpp  PlaneGenerator.cpp  Playable.cpp  Player.cpp  PlayerMovement.cpp  TutorialsController.cpp  UIParticleGenerator.cpp
src/Additional/Generation/: CMakeLists.txt  pch.h
src/Additional/Humans/: CMakeLists.txt  pch.h
src/Additional/StateMachine/: CMakeLists.txt  pch.h
src/Additional/StateMachine/src/: impl.cpp
src/Additional/Tilemap/: CMakeLists.txt  pch.h
src/CollisionSystem/: CMakeLists.txt  pch.h
src/CollisionSystem/include/: BoundingVolume.h  Collider.h  CollisionManager.h  EnviromentalBoundingVolume.h  GameCollider.h  LayersData.h  Ray.h
src/CollisionSystem/src/: BoundingVolume.cpp  Collider.cpp  CollisionManager.cpp  GameCollider.cpp  Ray.cpp
src/Editor/Common/: CMakeLists.txt  pch.h
src/Game/: CMakeLists.txt
src/GraphicEngine/: CMakeLists.txt
src/GraphicEngine/include/: GraphicEnigine.h  InstatiatingMesh.h  InstatiatingModel.h  Material.h  MaterialsManager.h  Mesh.h  MeshRenderer.h  MeshRenderingManager.h  Model.h  ModelData.h  ModelsManager.h  Shader.h  Shader2.h  ShaderManager.h  TexturesManager.h
src/GraphicEngine/src/: GraphicEngine.cpp  InstatiatingMesh.cpp  InstatiatingModel.cpp  Material.cpp  MaterialsManager.cpp  Mesh.cpp  MeshRenderer.cpp  MeshRenderingManager.cpp  Model.cpp  ModelsManager.cpp  Shader.cpp  ShaderManager.cpp  ShaderManager.h  TexturesManager.cpp
src/Input/: Input Guide.txt  Input.cpp  Input.h
src/LightingSystem/: CMakeLists.txt
src/LightingSystem/include/: Light.h  LightingController.h
src/LightingSystem/src/: LightingController.cpp
src/Tilemap/: CMakeLists.txt  pch.h
src/Tilemap/include/Tilemap/: HexagonalTile.h  HexagonalTilemap.h
src/Tilemap/src/Tilemap/: HexagonalTile.cpp  HexagonalTilemap.cpp
src/Twin2Engine/: AudioComponent.cpp  AudioManager.cpp  BoxColliderComponent.cpp  Button.cpp  CMakeLists.txt  CameraComponent.cpp  CapsuleColliderComponent.cpp  ColliderComponent.cpp  Component.cpp  ConfigManager.cpp  DirectionalLightComponent.cpp  Engine.cpp  Font.cpp  FontManager.cpp  GameObject.cpp  Image.cpp  Input.cpp  PointLightComponent.cpp  RenderableComponent.cpp  SerializationMacros.h  Shader.cpp  SphereColliderComponent.cpp  SpotLightComponent.cpp  Sprite.cpp  SpriteManager.cpp  Text.cpp  Texture2D.cpp  TextureManager.cpp  Time.cpp  Transform.cpp  Window.cpp  pch.h
src/Twin2Engine/CollisionSystem/: CMakeLists.txt
src/Twin2Engine/CollisionSystem/src/: BoundingVolume.cpp  Collider.cpp  CollisionManager.cpp  EnviromentalBoundingVolume.cpp  GameCollider.cpp
src/Twin2Engine/GraphicEngine/: CMakeLists.txt  pch.h
src/Twin2Engine/GraphicEngine/include/: GraphicEnigine.h  GraphicEnigineManager.h  InstatiatingMesh.h  InstatiatingModel.h  Material.h  MaterialParameters.h  MaterialsManager.h  Mesh.h  MeshRenderer.h  MeshRenderingManager.h  Model.h  ModelData.h  ModelsManager.h  Shader.h  ShaderManager.h  UIRenderingManager.h  Vertex.h
src/Twin2Engine/GraphicEngine/src/: GraphicEngine.cpp  (+14 more)
src/Twin2Engine/LightingSystem/: CMakeLists.txt  pch.h
src/Twin2Engine/PhysicEngine/: CMakeLists.txt  pch.h
src/Twin2Engine/PhysicsEngine/: CMakeLists.txt
src/Twin2Engine/Tools/: CMakeLists.txt  pch.h
src/Twin2Engine/core/: AudioManager.h  BoxColliderComponent.h  CameraComponent.h  CapsuleColliderComponent.h  ColliderComponent.h  Component.h  DirectionalLightComponent.h  Engine.h  EventHandler.h  Frustum.h  GameObject.h  Input.h  LightComponent.h  PointLightComponent.h  RenderableComponent.h  SphereColliderComponent.h  SpotLightComponent.h  Sprite.h  Texture2D.h  Time.h  Transform.h  TypesMap.h  Window.h  typesMap_idea.txt
src/Twin2Engine/imgui_impl/: imgui_impl_opengl3.cpp
src/Twin2Engine/inc/: Component.h  Engine.h  GameObject.h  Input.h  RenderableComponent.h  Shader.h  Transform.h
src/Twin2Engine/include/: Engine.h  GameEngine.h
src/Twin2Engine/manager/: AudioManager.h  FontManager.h  SpriteManager.h  TextureManager.h
src/Twin2Engine/src/: Button.cpp  CameraComponent.cpp  CapsuleColliderComponent.cpp  Engine.cpp  GameEngine.cpp  Image.cpp  Input.cpp  SpriteManager.cpp  TextureManager.cpp  Transform.cpp  Window.cpp
src/Twin2Engine/ui/: Button.h  EventHandler.h  Image.h  Text.h
src/Twin2EngineCore/: CMakeLists.txt  ColliderComponent.cpp  ColliderComponent.h  Component.cpp  Component.h  ConfigManager.cpp  ConfigManager.h  Engine.cpp  GameObject.cpp  GameObject.h  Input.cpp  RenderableComponent.cpp  Shader.h  Time.cpp  Transform.cpp  Transform.h
src/Twin2EngineCore/inc/: Component.h  Engine.h  GameObject.h  Input.h  Time.h
tools/materialCreator/: CMakeLists.txt  MaterialCreator.cpp
tools/shader_compiler/: CMakeLists.txt  ShaderCompiler.cpp  ShadersOrigin  config.h  config.h.in
(+786 files in other folders)
