# SHADE_COMPILER

project(ShaderCompiler)

#file(CREATE_LINK ${SHADER_ORIGIN_FOLDER}/res ${CMAKE_CURRENT_SOURCE_DIR}/bin/ShadersOrigin SYMBOLIC)
file(CREATE_LINK ${SHADER_ORIGIN_FOLDER}/res ${CMAKE_CURRENT_SOURCE_DIR}/ShadersOrigin SYMBOLIC)

add_executable(${PROJECT_NAME} ShaderCompiler.cpp)

target_link_libraries(${PROJECT_NAME} PRIVATE yaml-cpp)

#set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

file(CREATE_LINK ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/bin SYMBOLIC)
file(CREATE_LINK ${SHADER_ORIGIN_FOLDER}/res ${CMAKE_CURRENT_BINARY_DIR}/ShadersOrigin SYMBOLIC)

set(SHADER_COMPILER_EXE ${CMAKE_CURRENT_SOURCE_DIR}/bin/${PROJECT_NAME}.exe CACHE STRING "Description" FORCE)

